# RL

./: README.md
PeakSeeking/: .gitignore  README.md  pyproject.toml
PeakSeeking/configs/: peak_seeking.yaml
PeakSeeking/peak_seeking/: __init__.py  config.py
PeakSeeking/peak_seeking/envs/: __init__.py  peak_seeking_env.py
PeakSeeking/peak_seeking/training/: __init__.py  q_learning.py
PeakSeeking/scripts/: 1.py  train_peak_seeking.py
PeakSeeking/tests/: test_env.py
runs/: q_table.npy
